force-app/main/default/objects/LLC_BI__Product_Feature__c/LLC_BI__Product_Feature__c.object-meta.xml
<CustomObject>
    <description>The Product Feature Object stores information and details about specific features a product can have. The Product Feature is assigned to products to group them under similar features.</description>
    <label>Product Feature</label>
    <nameField>
        <displayFormat>Product_Feature-{00000}</displayFormat>
        <label>Product Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>