force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Matrix_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Matrix_Calculation_Method__c</fullName>
    <description>Administrators populate this picklist to determine if the loan in association uses either Matrix Management or Rule Engine.</description>
    <inlineHelpText>Select the matrix calculation method of the associated loan.</inlineHelpText>
    <label>Matrix Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rule Engine</fullName>
                <default>true</default>
                <label>Rule Engine</label>
            </value>
            <value>
                <fullName>Matrix Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>