force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/WKDDP__Certificate_Of_Deposit_Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Certificate_Of_Deposit_Certificate_Type__c</fullName>
    <description>Administrators populate this optional picklist to determine the user&apos;s preferred certificate format, combo or CD-only, and type, true certificate or receipt.</description>
    <inlineHelpText>Select the preferred certificate format and type. The Certified Combo doc generates the long-form certificate, a signature card, and the account disclosure combination form.</inlineHelpText>
    <label>Certificate Of Deposit Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificated--Combo Doc</fullName>
            </value>
            <value>
                <fullName>Certificated--CD Only</fullName>
            </value>
            <value>
                <fullName>Uncertificated--Combo Doc</fullName>
            </value>
            <value>
                <fullName>Uncertificated--Receipt Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>