force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/WKDDP__Skip_DocPrep_iFrame__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Skip_DocPrep_iFrame__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to skip Docviewer for completely-mapped products. By default, it is false.</description>
    <inlineHelpText>Select this checkbox to skip Docview for completely-mapped products.</inlineHelpText>
    <label>Skip DocPrep iFrame</label>
    <type>Checkbox</type>
</CustomField>