force-app/main/default/objects/LLC_BI__Product_Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Allow_Participation__c</columns>
    <columns>LLC_BI__Allow_Syndication__c</columns>
    <columns>LLC_BI__Balloon__c</columns>
    <columns>LLC_BI__Balloon_Product_Structure__c</columns>
    <columns>LLC_BI__Is_Letter_of_Credit__c</columns>
    <columns>LLC_BI__Is_Budget_Item__c</columns>
    <columns>LLC_BI__Is_Lease__c</columns>
    <columns>LLC_BI__Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>