force-app/main/default/objects/LLC_BI__Product_Feature__c/listViews/Product_Features_with_Purpose_Code.listView-meta.xml
<ListView>
    <fullName>Product_Features_with_Purpose_Code</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Purpose_Code__c</columns>
    <columns>LLC_BI__Is_Bundle__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product Features with Purpose Code</label>
</ListView>